load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agent",
    srcs = [
        "agent_configuration.go",
        "agent_pool.go",
        "agent_worker.go",
        "api.go",
        "artifact_batch_creator.go",
        "artifact_downloader.go",
        "artifact_searcher.go",
        "artifact_uploader.go",
        "artifactory_downloader.go",
        "artifactory_uploader.go",
        "aws.go",
        "doc.go",
        "download.go",
        "ec2_meta_data.go",
        "ec2_tags.go",
        "ecs_meta_data.go",
        "form_uploader.go",
        "gcp_labels.go",
        "gcp_meta_data.go",
        "gs_downloader.go",
        "gs_uploader.go",
        "header_times_streamer.go",
        "job_runner.go",
        "k8s_tags.go",
        "log_streamer.go",
        "pipeline_parser.go",
        "pipeline_uploader.go",
        "register.go",
        "s3.go",
        "s3_downloader.go",
        "s3_uploader.go",
        "tags.go",
        "uploader.go",
    ],
    importpath = "github.com/buildkite/agent/v3/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//bootstrap/shell",
        "//env",
        "//experiments",
        "//hook",
        "//kubernetes",
        "//logger",
        "//metrics",
        "//mime",
        "//pool",
        "//process",
        "//status",
        "//system",
        "//tracetools",
        "//version",
        "//yamltojson",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/credentials/stscreds",
        "@com_github_aws_aws_sdk_go//aws/defaults",
        "@com_github_aws_aws_sdk_go//aws/ec2metadata",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/ec2",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager",
        "@com_github_aws_aws_sdk_go//service/sts",
        "@com_github_brunoscheufler_aws_ecs_metadata_go//:aws-ecs-metadata-go",
        "@com_github_buildkite_interpolate//:interpolate",
        "@com_github_buildkite_roko//:roko",
        "@com_github_buildkite_shellwords//:shellwords",
        "@com_github_denisbrodbeck_machineid//:machineid",
        "@com_github_mattn_go_zglob//:go-zglob",
        "@com_google_cloud_go_compute_metadata//:metadata",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_api//compute/v1:compute",
        "@org_golang_google_api//googleapi",
        "@org_golang_google_api//storage/v1:storage",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)

go_test(
    name = "agent_test",
    srcs = [
        "agent_worker_test.go",
        "artifact_downloader_test.go",
        "artifact_searcher_test.go",
        "artifact_uploader_test.go",
        "artifactory_downloader_test.go",
        "artifactory_uploader_test.go",
        "download_test.go",
        "ec2_meta_data_test.go",
        "form_uploader_test.go",
        "gcp_meta_data_test.go",
        "gs_uploader_test.go",
        "job_runner_test.go",
        "k8s_tags_test.go",
        "pipeline_parser_test.go",
        "pipeline_uploader_test.go",
        "s3_downloader_test.go",
        "s3_uploader_test.go",
        "tags_test.go",
    ],
    embed = [":agent"],
    deps = [
        "//api",
        "//clicommand",
        "//env",
        "//experiments",
        "//logger",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":agent",
    visibility = ["//visibility:public"],
)
