load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agent",
    srcs = [
        "agent_configuration.go",
        "agent_pool.go",
        "agent_worker.go",
        "doc.go",
        "ec2_meta_data.go",
        "ec2_tags.go",
        "ecs_meta_data.go",
        "gcp_labels.go",
        "gcp_meta_data.go",
        "header_times_streamer.go",
        "idle_monitor.go",
        "job_runner.go",
        "k8s_tags.go",
        "log_streamer.go",
        "metrics.go",
        "pipeline_uploader.go",
        "run_job.go",
        "tags.go",
        "verify_job.go",
    ],
    importpath = "github.com/buildkite/agent/v3/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core",
        "//env",
        "//internal/agenthttp",
        "//internal/awslib",
        "//internal/experiments",
        "//internal/job/hook",
        "//internal/ptr",
        "//internal/shell",
        "//kubernetes",
        "//logger",
        "//metrics",
        "//process",
        "//status",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_ec2_imds//:imds",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_brunoscheufler_aws_ecs_metadata_go//:aws-ecs-metadata-go",
        "@com_github_buildkite_go_pipeline//:go-pipeline",
        "@com_github_buildkite_go_pipeline//signature",
        "@com_github_buildkite_roko//:roko",
        "@com_github_buildkite_shellwords//:shellwords",
        "@com_github_denisbrodbeck_machineid//:machineid",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_gowebpki_jcs//:jcs",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_google_cloud_go_compute_metadata//:metadata",
        "@org_golang_google_api//compute/v1:compute",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//google",
    ],
)

go_test(
    name = "agent_test",
    srcs = [
        "agent_worker_test.go",
        "fake_api_server_test.go",
        "gcp_meta_data_test.go",
        "job_runner_test.go",
        "k8s_tags_test.go",
        "log_streamer_test.go",
        "pipeline_uploader_test.go",
        "tags_test.go",
    ],
    embed = [":agent"],
    deps = [
        "//api",
        "//core",
        "//logger",
        "//metrics",
        "@com_github_buildkite_go_pipeline//:go-pipeline",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
