load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "agents.go",
        "annotations.go",
        "artifacts.go",
        "auth.go",
        "chunks.go",
        "client.go",
        "doc.go",
        "header_times.go",
        "heartbeats.go",
        "jobs.go",
        "meta_data.go",
        "oidc.go",
        "pings.go",
        "pipelines.go",
        "retryable.go",
        "steps.go",
        "uuid.go",
    ],
    importpath = "github.com/buildkite/agent/v3/api",
    visibility = ["//visibility:public"],
    deps = [
        "//logger",
        "@com_github_google_go_querystring//query",
        "@com_github_pborman_uuid//:uuid",
        "@org_golang_x_exp//slices",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "client_test.go",
        "oidc_test.go",
    ],
    deps = [
        ":api",
        "//logger",
        "@com_github_google_go_cmp//cmp",
    ],
)

alias(
    name = "go_default_library",
    actual = ":api",
    visibility = ["//visibility:public"],
)
