load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bootstrap",
    srcs = [
        "bootstrap.go",
        "config.go",
        "docker.go",
        "git.go",
        "knownhosts.go",
        "ssh.go",
        "tracing.go",
    ],
    importpath = "github.com/buildkite/agent/v3/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//agent/plugin",
        "//bootstrap/shell",
        "//env",
        "//experiments",
        "//hook",
        "//kubernetes",
        "//process",
        "//redaction",
        "//shellscript",
        "//tracetools",
        "//utils",
        "//version",
        "@com_github_buildkite_roko//:roko",
        "@com_github_buildkite_shellwords//:shellwords",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/ext",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/opentracer",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/tracer",
        "@io_opentelemetry_go_contrib_propagators_aws//xray",
        "@io_opentelemetry_go_contrib_propagators_b3//:b3",
        "@io_opentelemetry_go_contrib_propagators_jaeger//:jaeger",
        "@io_opentelemetry_go_contrib_propagators_ot//:ot",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_crypto//ssh/knownhosts",
        "@org_golang_x_exp//slices",
    ],
)

go_test(
    name = "bootstrap_test",
    srcs = [
        "bootstrap_test.go",
        "config_test.go",
        "git_test.go",
        "knownhosts_test.go",
        "ssh_test.go",
    ],
    embed = [":bootstrap"],
    deps = [
        "//bootstrap/shell",
        "//env",
        "//redaction",
        "//tracetools",
        "@com_github_buildkite_bintest_v3//:bintest",
        "@com_github_gliderlabs_ssh//:ssh",
        "@com_github_google_go_cmp//cmp",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/opentracer",
    ],
)

alias(
    name = "go_default_library",
    actual = ":bootstrap",
    visibility = ["//visibility:public"],
)
