load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clicommand",
    srcs = [
        "acknowledgements.go",
        "agent_pause.go",
        "agent_resume.go",
        "agent_start.go",
        "agent_stop.go",
        "annotate.go",
        "annotation_remove.go",
        "artifact_download.go",
        "artifact_search.go",
        "artifact_shasum.go",
        "artifact_upload.go",
        "bootstrap.go",
        "build_cancel.go",
        "cache_restore.go",
        "cache_save.go",
        "cache_shared.go",
        "cancel_signal.go",
        "commands.go",
        "doc.go",
        "env_dump.go",
        "env_get.go",
        "env_set.go",
        "env_unset.go",
        "errors.go",
        "git_credentials_helper.go",
        "global.go",
        "kubernetes_bootstrap.go",
        "lock_acquire.go",
        "lock_common.go",
        "lock_do.go",
        "lock_done.go",
        "lock_get.go",
        "lock_release.go",
        "meta_data_exists.go",
        "meta_data_get.go",
        "meta_data_keys.go",
        "meta_data_set.go",
        "oidc_request_token.go",
        "pipeline_upload.go",
        "profiler.go",
        "redactor_add.go",
        "secret_get.go",
        "step_cancel.go",
        "step_get.go",
        "step_update.go",
        "tool_keygen.go",
        "tool_sign.go",
    ],
    embedsrcs = ["dummy.md.gz"],
    importpath = "github.com/buildkite/agent/v3/clicommand",
    visibility = ["//visibility:public"],
    deps = [
        "//agent",
        "//api",
        "//cliconfig",
        "//core",
        "//env",
        "//internal/agentapi",
        "//internal/artifact",
        "//internal/awslib",
        "//internal/bkgql",
        "//internal/cache",
        "//internal/cryptosigner/aws",
        "//internal/experiments",
        "//internal/job",
        "//internal/job/hook",
        "//internal/osutil",
        "//internal/redact",
        "//internal/replacer",
        "//internal/secrets",
        "//internal/self",
        "//internal/shell",
        "//internal/stdin",
        "//jobapi",
        "//kubernetes",
        "//lock",
        "//logger",
        "//metrics",
        "//process",
        "//status",
        "//tracetools",
        "//version",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_kms//:kms",
        "@com_github_buildkite_go_pipeline//:go-pipeline",
        "@com_github_buildkite_go_pipeline//jwkutil",
        "@com_github_buildkite_go_pipeline//ordered",
        "@com_github_buildkite_go_pipeline//signature",
        "@com_github_buildkite_go_pipeline//warning",
        "@com_github_buildkite_interpolate//:interpolate",
        "@com_github_buildkite_roko//:roko",
        "@com_github_buildkite_shellwords//:shellwords",
        "@com_github_dustinkirkland_golang_petname//:golang-petname",
        "@com_github_lestrrat_go_jwx_v2//jwa",
        "@com_github_lestrrat_go_jwx_v2//jwk",
        "@com_github_oleiade_reflections//:reflections",
        "@com_github_urfave_cli//:cli",
        "@dev_drjosh_zzglob//:zzglob",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "clicommand_test",
    srcs = [
        "agent_pause_test.go",
        "agent_resume_test.go",
        "agent_start_test.go",
        "agent_stop_test.go",
        "annotate_test.go",
        "artifact_shasum_test.go",
        "build_cancel_test.go",
        "config_completeness_test.go",
        "git_credentials_helper_test.go",
        "pipeline_upload_test.go",
        "redactor_add_test.go",
        "step_cancel_test.go",
    ],
    embed = [":clicommand"],
    deps = [
        "//core",
        "//env",
        "//internal/experiments",
        "//logger",
        "@com_github_buildkite_go_pipeline//:go-pipeline",
        "@com_github_buildkite_go_pipeline//ordered",
        "@com_github_google_go_cmp//cmp",
        "@com_github_oleiade_reflections//:reflections",
        "@com_github_stretchr_testify//assert",
        "@com_github_urfave_cli//:cli",
        "@tools_gotest_v3//assert",
    ],
)
