load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "env",
    srcs = ["environment.go"],
    importpath = "github.com/buildkite/agent/v3/env",
    visibility = ["//visibility:public"],
)

go_test(
    name = "env_test",
    srcs = ["environment_test.go"],
    embed = [":env"],
    deps = ["@com_github_stretchr_testify//assert"],
)

alias(
    name = "go_default_library",
    actual = ":env",
    visibility = ["//visibility:public"],
)
