load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "experiments",
    srcs = ["experiments.go"],
    importpath = "github.com/buildkite/agent/v3/experiments",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":experiments",
    visibility = ["//visibility:public"],
)
