load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kubernetes",
    srcs = [
        "kubernetes.go",
        "umask.go",
        "umask_windows.go",
    ],
    importpath = "github.com/buildkite/agent/v3/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//logger",
        "//process",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "kubernetes_test",
    srcs = ["kubernetes_test.go"],
    embed = [":kubernetes"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//logger",
            "@com_github_stretchr_testify//require",
        ],
        "//conditions:default": [],
    }),
)

alias(
    name = "go_default_library",
    actual = ":kubernetes",
    visibility = ["//visibility:public"],
)
