load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kubernetes",
    srcs = [
        "client.go",
        "runner.go",
        "umask.go",
        "umask_windows.go",
    ],
    importpath = "github.com/buildkite/agent/v3/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//logger",
        "//process",
        "@com_github_buildkite_roko//:roko",
    ] + select({
        "@rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:dragonfly": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:js": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:osx": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:plan9": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:qnx": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "kubernetes_test",
    srcs = ["kubernetes_test.go"],
    embed = [":kubernetes"],
    deps = select({
        "@rules_go//go/platform:aix": [
            "//logger",
        ],
        "@rules_go//go/platform:android": [
            "//logger",
        ],
        "@rules_go//go/platform:darwin": [
            "//logger",
        ],
        "@rules_go//go/platform:dragonfly": [
            "//logger",
        ],
        "@rules_go//go/platform:freebsd": [
            "//logger",
        ],
        "@rules_go//go/platform:illumos": [
            "//logger",
        ],
        "@rules_go//go/platform:ios": [
            "//logger",
        ],
        "@rules_go//go/platform:js": [
            "//logger",
        ],
        "@rules_go//go/platform:linux": [
            "//logger",
        ],
        "@rules_go//go/platform:netbsd": [
            "//logger",
        ],
        "@rules_go//go/platform:openbsd": [
            "//logger",
        ],
        "@rules_go//go/platform:osx": [
            "//logger",
        ],
        "@rules_go//go/platform:plan9": [
            "//logger",
        ],
        "@rules_go//go/platform:qnx": [
            "//logger",
        ],
        "@rules_go//go/platform:solaris": [
            "//logger",
        ],
        "//conditions:default": [],
    }),
)
