load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = [
        "init_windows.go",
        "slog.go",
        "testlog.go",
    ],
    importpath = "github.com/buildkite/agent/v4/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_lmittmann_tint//:tint",
        "@org_golang_x_term//:term",
    ] + select({
        "@rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "logger_test",
    srcs = [
        "slog_test.go",
        "testlog_test.go",
    ],
    deps = [
        ":logger",
    ],
)
