load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["metrics.go"],
    importpath = "github.com/buildkite/agent/v3/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//logger",
        "@com_github_datadog_datadog_go_v5//statsd",
    ],
)
