load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mime",
    srcs = ["mime.go"],
    importpath = "github.com/buildkite/agent/v3/mime",
    visibility = ["//visibility:public"],
)

go_test(
    name = "mime_test",
    srcs = ["mime_test.go"],
    embed = [":mime"],
)

alias(
    name = "go_default_library",
    actual = ":mime",
    visibility = ["//visibility:public"],
)
