load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pool",
    srcs = ["pool.go"],
    importpath = "github.com/buildkite/agent/v3/pool",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":pool",
    visibility = ["//visibility:public"],
)
