load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "process",
    srcs = [
        "cat.go",
        "format.go",
        "prefixer.go",
        "process.go",
        "pty.go",
        "pty_windows.go",
        "run.go",
        "scanner.go",
        "signal.go",
        "signal_windows.go",
    ],
    importpath = "github.com/buildkite/agent/v3/process",
    visibility = ["//visibility:public"],
    deps = [
        "//logger",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "process_test",
    srcs = [
        "prefixer_test.go",
        "process_test.go",
        "scanner_test.go",
        "signal_test.go",
    ],
    deps = [
        ":process",
        "//logger",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
    ],
)

alias(
    name = "go_default_library",
    actual = ":process",
    visibility = ["//visibility:public"],
)
